ignoring missing xmls (some are not in original DB) + xml/tif count fix

--- a/notebooks/2.0-benoit-iit-cdip-data-retrieval.ipynb
+++ b/notebooks/2.0-benoit-iit-cdip-data-retrieval.ipynb
@@ -276,9 +276,9 @@
     "            if file.name in missing_files:\n",
     "                archive.extract(file, path=iit_cdip_images_path)\n",
     "                if file.name.endswith('.tif'):\n",
-    "                    xml_amount += 1\n",
-    "                else:\n",
     "                    tif_amount += 1\n",
+    "                else:\n",
+    "                    xml_amount += 1\n",
     "    print(f\"   ... Successfully extracted {tif_amount} tif + {xml_amount} xml files, in {time.time() - t:.2f} seconds\")"
    ]
   },
@@ -293,7 +293,7 @@
     "    letters = index\n",
     "    ids_list = serie.document_ids\n",
     "    filenames_list = serie.filenames\n",
-    "    missing_ids, missing_filenames = remove_existing_ids(ids_list, filenames_list, iit_cdip_images_path)\n",
+    "    missing_ids, missing_filenames = remove_existing_ids(ids_list, filenames_list, iit_cdip_images_path, also_check_xmls = False)\n",
     "    print(f\"Processing letters {letters}: {len(missing_ids)} images to retrieve\")\n",
     "    if missing_ids:\n",
     "        import_iit_cdip_images_set(letters, missing_ids, missing_filenames, iit_cdip_images_path, iit_cdip_xmls_path, nist_images_base_url)\n"
