complete data_extraction notebook (4.1)

--- a/notebooks/4.1-benoit-iit-cdip-data-retrieval.ipynb
+++ b/notebooks/4.1-benoit-iit-cdip-data-retrieval.ipynb
@@ -20,11 +20,16 @@
     "\n",
     "A l'issue (chapitre 2), il reconstitue la liste des identifiants de documents de la BDD RVL-CDIP qui se trouvent dans le répertoire *rvl_cdip_images_path*.\n",
     "\n",
-    "Enfin (chapitre 3), il identifie les images tar à télécharger (en ignorant celles qui ont déjà été pleinement exploitées), les télécharge sur le site *data.nist.gov* puis écrit sur le disque dur, dans l'arborescence du répertoire *iit_cdip_images_path*, les fichiers tif et xml concernés.\n",
+    "Ensuite (chapitre 3), il identifie les images tar à télécharger (en ignorant celles qui ont déjà été pleinement exploitées), les télécharge sur le site *data.nist.gov* puis écrit sur le disque dur, dans l'arborescence du répertoire *iit_cdip_images_path*, les fichiers tif et xml concernés.\n",
     "\n",
     "Remarques:\n",
-    "- Lors de cette dernière phase, les fichiers .tar téléchargés sont volumineux (environ 2.5 GB par fichier, et environ 600 fichiers tar au total, ce qui représente plus d'1 To de données à télécharger). Toutefois, les fichiers à conserver ne réprésentent qu'un volume de données estimé entre 50 et 80 Go. Pour éviter des écritures disque inutiles et l'occupation d'un très gros volume, il a été choisi de traiter les fichiers téléchargés à la volée, sans les écrire sur le disque dur. L'inconvénient est que si l'on souhaite accéder à nouveau à ce fichier tar, il faudra le télécharger à nouveau. L'avantage, au delà de l'économie d'usure des disques durs) est de limiter l'espace disque requis.\n",
-    "- **[IMPORTANT] L'utilisation de ce script sur la BDD RVL-CDIP complète écrira environ 50 à 80 Go de fichiers tif et xml sur le disque dur**.\n"
+    "- Lors de cette phase, les fichiers .tar téléchargés sont volumineux (environ 2.5 GB par fichier, et environ 600 fichiers tar au total, ce qui représente plus d'1 To de données à télécharger). Toutefois, les fichiers à conserver ne réprésentent qu'un peu moins de 70Go. Pour éviter des écritures disque inutiles et l'occupation d'un très gros volume, il a été choisi de traiter les fichiers téléchargés à la volée, sans les écrire sur le disque dur. L'inconvénient est que si l'on souhaite accéder à nouveau à ce fichier tar, il faudra le télécharger à nouveau. L'avantage, au delà de l'économie d'usure des disques durs) est de limiter l'espace disque requis.\n",
+    "- Dans les fichiers .tar téléchargés, certains documents ne disposent pas de fichiers xml associés. Dans ce cas, seule l'image est obtenue.\n",
+    "\n",
+    "Enfin (chapitre 4), le notebook permet de télécharger les fichiers xml \"collectifs\", dans lesquels sont rassemblées les métadonnées de plusieurs documents (environ 10000 par fichier). Les fichiers téléchargés sont traités à la volée pour être extraits et réduits afin de ne conserver que les métadonnées liées aux documents de la base de données RVL_CDIP. Ce traitement évite à nouveaux des accès disque et permet de faire passer le volume requis d'environ 24 Go à environ 3 Go.\n",
+    "\n",
+    "Remarque:\n",
+    "- **[IMPORTANT] Au bilan, l'utilisation de ce script écrira environ 70 Go de fichiers tif et xml sur le disque dur et téléchargera environ 1,5 To d'internet**.\n"
    ]
   },
   {
@@ -52,11 +57,13 @@
    "source": [
     "import os\n",
     "import io\n",
+    "import gzip\n",
     "import time\n",
     "import requests\n",
     "import tarfile\n",
     "import platform\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from lxml import etree"
    ]
   },
   {
@@ -195,15 +202,7 @@
    "id": "68ddf6d6-9917-411a-943b-ed7148c4b9c7",
    "metadata": {},
    "source": [
-    "## 3. Téléchargement des données de la base IIT-CDIP"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "495f5b31-3d36-4142-96b5-d2b276b8bc1d",
-   "metadata": {},
-   "source": [
-    "### 3.1. Fichiers images et xml individuels"
+    "## 3. Téléchargement des images et fichiers xml individuels de la base IIT-CDIP"
    ]
   },
   {
@@ -301,13 +300,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d616717-6be4-4ed3-933e-87f6f82d041f",
+   "id": "3f0835d1-db49-47e8-9e7a-bbd8a7c6abb8",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "@ben : \n",
-    "- Rajouter le téléchargement des autres fichiers xmls.\n",
-    "- MaJ README d'entete quand fait"
+    "## 4. Téléchargement des xmls communs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ca4820-9a59-413a-933e-63c83df4a485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# urls de téléchargement=\n",
+    "# https://data.nist.gov/od/ds/ark:/88434/mds2-2531/cdip-text/cdip-1.tar\n",
+    "# de 1 à 6\n",
+    "\n",
+    "for n in range(1, 7):\n",
+    "    print(f\"Downloading  du fichier {n}/6\")\n",
+    "    url = f\"https://data.nist.gov/od/ds/ark:/88434/mds2-2531/cdip-text/cdip-{n}.tar\"\n",
+    "    reponse = requests.get(url, stream=True)\n",
+    "    with tarfile.open(fileobj=io.BytesIO(reponse.content), mode=\"r|*\") as archive:\n",
+    "        for gz_info in archive:\n",
+    "            letters = gz_info.name[8] + gz_info.name[10]\n",
+    "            rvl_ids = rvl_cdip_df[rvl_cdip_df.document_id.str.startswith(letters)].document_id.tolist()\n",
+    "            output_filename = os.path.join(iit_cdip_xmls_path, f\"{letters}.xml\")\n",
+    "            z_file = archive.extractfile(gz_info)\n",
+    "            compressed_data = z_file.read()\n",
+    "            decompressed_data = gzip.decompress(compressed_data)\n",
+    "            try:\n",
+    "                xml_file = io.BytesIO(decompressed_data)\n",
+    "                parser = etree.XMLParser(recover=True)\n",
+    "                tree = etree.parse(xml_file, parser)\n",
+    "                root = tree.getroot()\n",
+    "            except Exception as e:\n",
+    "                print(f\"Erreur de parsing XML : {e}\")\n",
+    "                continue    \n",
+    "            print(gz_info.name, letters, \":\", \"existing records=\", len(root.findall(\"record\")), end=\"\")\n",
+    "            for record in root.findall(\"record\"):\n",
+    "                docid_text = getattr(record.find(\"docid\"), \"text\", None)\n",
+    "                if docid_text not in rvl_ids:\n",
+    "                    root.remove(record)\n",
+    "            tree.write(output_filename)\n",
+    "            print(\" kept \", len(root.findall(\"record\")), \" out of \", len(rvl_ids), \" possibles.\")\n",
+    "                \n",
+    "                "
    ]
   }
  ],
