fixed tuple instead of string value in 2 dataframe fields

--- a/notebooks/2.1-benoit-DOCUMENTS-dataframe-creation.ipynb
+++ b/notebooks/2.1-benoit-DOCUMENTS-dataframe-creation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27a80f19-05e8-400a-9cfa-78c06ae1cbb0",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c8fc2081-3618-4bee-ab4e-c7cfd42450e4",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2460e3d2-e6f5-4c13-95a9-1bb3f40255bc",
    "metadata": {},
    "outputs": [],
@@ -113,99 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "83943d34-883d-4999-8f5f-d38543255646",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duree d'exécution: 18.183 secondes.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>document_id</th>\n",
-       "      <th>filename</th>\n",
-       "      <th>rvl_image_path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>aaa06d00</td>\n",
-       "      <td>50486482-6482.tif</td>\n",
-       "      <td>raw/RVL-CDIP/images/imagesa/a/a/a/aaa06d00/504...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aaa08d00</td>\n",
-       "      <td>2072197187.tif</td>\n",
-       "      <td>raw/RVL-CDIP/images/imagesa/a/a/a/aaa08d00/207...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aaa09e00</td>\n",
-       "      <td>2029372116.tif</td>\n",
-       "      <td>raw/RVL-CDIP/images/imagesa/a/a/a/aaa09e00/202...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>aaa10c00</td>\n",
-       "      <td>2085133627a.tif</td>\n",
-       "      <td>raw/RVL-CDIP/images/imagesa/a/a/a/aaa10c00/208...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>aaa11d00</td>\n",
-       "      <td>515558347+-8348.tif</td>\n",
-       "      <td>raw/RVL-CDIP/images/imagesa/a/a/a/aaa11d00/515...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  document_id             filename  \\\n",
-       "0    aaa06d00    50486482-6482.tif   \n",
-       "1    aaa08d00       2072197187.tif   \n",
-       "2    aaa09e00       2029372116.tif   \n",
-       "3    aaa10c00      2085133627a.tif   \n",
-       "4    aaa11d00  515558347+-8348.tif   \n",
-       "\n",
-       "                                      rvl_image_path  \n",
-       "0  raw/RVL-CDIP/images/imagesa/a/a/a/aaa06d00/504...  \n",
-       "1  raw/RVL-CDIP/images/imagesa/a/a/a/aaa08d00/207...  \n",
-       "2  raw/RVL-CDIP/images/imagesa/a/a/a/aaa09e00/202...  \n",
-       "3  raw/RVL-CDIP/images/imagesa/a/a/a/aaa10c00/208...  \n",
-       "4  raw/RVL-CDIP/images/imagesa/a/a/a/aaa11d00/515...  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = time.time()\n",
     "df_base = get_documents_base()\n",
@@ -223,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9b944c87-96d5-46c6-b5a3-9858a2267498",
    "metadata": {},
    "outputs": [],
@@ -250,92 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7348d195-18d6-4896-8d1e-4835dc962ece",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duree d'exécution: 0.517 secondes.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>document_id</th>\n",
-       "      <th>label</th>\n",
-       "      <th>data_set</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>aaa06d00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aaa08d00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aaa09e00</td>\n",
-       "      <td>11</td>\n",
-       "      <td>val</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>aaa10c00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>aaa11d00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  document_id  label data_set\n",
-       "0    aaa06d00      6     test\n",
-       "1    aaa08d00      9    train\n",
-       "2    aaa09e00     11      val\n",
-       "3    aaa10c00      2    train\n",
-       "4    aaa11d00      3    train"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = time.time()\n",
     "df_labels_and_data_sets = get_labels_and_data_sets()\n",
@@ -353,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "641d4c4f-d040-4285-a34c-1030567fb819",
    "metadata": {},
    "outputs": [],
@@ -365,9 +194,9 @@
     "        xml_path = None\n",
     "        for filename in filenames:\n",
     "            if filename.endswith(\".tif\"):\n",
-    "                tif_path = os.path.join(os.path.relpath(foldername, data_path), filename),\n",
+    "                tif_path = os.path.join(os.path.relpath(foldername, data_path), filename)\n",
     "            if filename.endswith(\".xml\"):\n",
-    "                xml_path = os.path.join(os.path.relpath(foldername, data_path), filename),\n",
+    "                xml_path = os.path.join(os.path.relpath(foldername, data_path), filename)\n",
     "        if tif_path or xml_path:\n",
     "            tmp_list.append((\n",
     "                os.path.basename(foldername), \n",
@@ -380,99 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3607e003-573c-4de7-9d15-9d19e5c1c7b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duree d'exécution: 21.376 secondes.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>document_id</th>\n",
-       "      <th>iit_image_path</th>\n",
-       "      <th>iit_individual_xml_path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>aaa06d00</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa06d00/50...</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa06d00/aa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aaa08d00</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa08d00/20...</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa08d00/aa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aaa09e00</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa09e00/20...</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa09e00/aa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>aaa10c00</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa10c00/20...</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa10c00/aa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>aaa11d00</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa11d00/51...</td>\n",
-       "      <td>(raw/IIT-CDIP/images/imagesa/a/a/a/aaa11d00/aa...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  document_id                                     iit_image_path  \\\n",
-       "0    aaa06d00  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa06d00/50...   \n",
-       "1    aaa08d00  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa08d00/20...   \n",
-       "2    aaa09e00  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa09e00/20...   \n",
-       "3    aaa10c00  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa10c00/20...   \n",
-       "4    aaa11d00  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa11d00/51...   \n",
-       "\n",
-       "                             iit_individual_xml_path  \n",
-       "0  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa06d00/aa...  \n",
-       "1  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa08d00/aa...  \n",
-       "2  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa09e00/aa...  \n",
-       "3  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa10c00/aa...  \n",
-       "4  (raw/IIT-CDIP/images/imagesa/a/a/a/aaa11d00/aa...  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = time.time()\n",
     "df_iit_ind = get_iit_individual_data()\n",
@@ -490,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3ce4aa8a-6367-4803-9a0e-3214465ab2dc",
    "metadata": {},
    "outputs": [],
@@ -512,86 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d3b7e67e-6169-4fed-ba3c-9514d104b8e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duree d'exécution: 10.164 secondes.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>document_id</th>\n",
-       "      <th>iit_collective_xml_path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>aaa06d00</td>\n",
-       "      <td>raw/IIT-CDIP/xmls/aa.xml</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aaa08d00</td>\n",
-       "      <td>raw/IIT-CDIP/xmls/aa.xml</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aaa09e00</td>\n",
-       "      <td>raw/IIT-CDIP/xmls/aa.xml</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>aaa10c00</td>\n",
-       "      <td>raw/IIT-CDIP/xmls/aa.xml</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>aaa11d00</td>\n",
-       "      <td>raw/IIT-CDIP/xmls/aa.xml</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  document_id   iit_collective_xml_path\n",
-       "0    aaa06d00  raw/IIT-CDIP/xmls/aa.xml\n",
-       "1    aaa08d00  raw/IIT-CDIP/xmls/aa.xml\n",
-       "2    aaa09e00  raw/IIT-CDIP/xmls/aa.xml\n",
-       "3    aaa10c00  raw/IIT-CDIP/xmls/aa.xml\n",
-       "4    aaa11d00  raw/IIT-CDIP/xmls/aa.xml"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = time.time()\n",
     "df_iit_coll = get_iit_collective_data()\n",
@@ -609,40 +273,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ddc90d55-6348-4e81-a35d-d89da4c6cd01",
    "metadata": {},
    "outputs": [],
    "source": [
     "dfs = [df_base, df_labels_and_data_sets, df_iit_ind, df_iit_coll]  # liste de DataFrames\n",
-    "df_documents = reduce(lambda left, right: pd.merge(left, right, on='document_id', how=\"left\"), dfs)"
+    "df_documents = reduce(lambda left, right: pd.merge(left, right, on='document_id', how=\"left\"), dfs)\n",
+    "df_documents.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "5639f8e2-e48d-4921-bce5-814f48e89eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_documents.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d51c2a7-ef28-4564-8901-c73da219ad6a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "document_id                     0\n",
-       "filename                        0\n",
-       "rvl_image_path                  0\n",
-       "label                           0\n",
-       "data_set                        0\n",
-       "iit_image_path                  0\n",
-       "iit_individual_xml_path    241651\n",
-       "iit_collective_xml_path      1990\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ATTENTION: PROBLEME A INVESTIGUER SUR LA COLONNE iit_collective_xml_path:\n",
     "df_documents.isna().sum()"
@@ -650,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cedd46ee-20ea-467d-ab11-af826925fdd0",
    "metadata": {},
    "outputs": [],
