--- a/notebooks/1.1-benoit-rvl-cdip-data-retrieval.ipynb
+++ b/notebooks/1.1-benoit-rvl-cdip-data-retrieval.ipynb
@@ -60,6 +60,7 @@
     "\n",
     "data_path = os.path.join(project_path, 'data')\n",
     "raw_data_path = os.path.join(data_path, 'raw')\n",
+    "extracted_data_path = os.path.join(data_path, 'extracted')\n",
     "processed_data_path = os.path.join(data_path, 'processed')\n",
     "\n",
     "raw_rvl_cdip_path = os.path.join(raw_data_path, 'RVL-CDIP')\n",
