--- a/notebooks/1.2-benoit-iit-cdip-data-retrieval.ipynb
+++ b/notebooks/1.2-benoit-iit-cdip-data-retrieval.ipynb
@@ -100,8 +100,8 @@
     "\n",
     "data_path = os.path.join(project_path, 'data')\n",
     "raw_data_path = os.path.join(data_path, 'raw')\n",
+    "extracted_data_path = os.path.join(data_path, 'extracted')\n",
     "processed_data_path = os.path.join(data_path, 'processed')\n",
-    "# processed_data_path = os.path.join(data_path, 'processed')\n",
     "\n",
     "rvl_cdip_images_path = os.path.join(raw_data_path, 'RVL-CDIP', 'images')\n",
     "iit_cdip_images_path = os.path.join(raw_data_path, 'IIT-CDIP', 'images')\n",
