re-numbered notebook to create documents dataframe

--- a/notebooks/1.3-benoit-DOCUMENTS-dataframe-creation.ipynb
+++ b/notebooks/1.3-benoit-DOCUMENTS-dataframe-creation.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## README\n",
-    "Ce notebook permet de télécharger sur le site de huggingface les images de la BDD RVL-CDIP.\n",
+    "Ce notebook permet de créer la DataFrame DOCUMENTS, qui recense l'ensemble des documents utilisés dans le cadre du projet.\n",
     "\n",
     "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
     "\n",
