impr: restructured base dataframes

--- a/notebooks/1.3-DOCUMENTS-dataframe-creation.ipynb
+++ b/notebooks/1.3-DOCUMENTS-dataframe-creation.ipynb
@@ -5,7 +5,7 @@
    "id": "cf06b663-d258-478e-9397-7332fbcb60ea",
    "metadata": {},
    "source": [
-    "# Création DataFrame DOCUMENTS"
+    "# Création des dataframes de base"
    ]
   },
   {
@@ -14,19 +14,14 @@
    "metadata": {},
    "source": [
     "## README\n",
-    "Ce notebook permet de créer la DataFrame DOCUMENTS, qui recense l'ensemble des documents utilisés dans le cadre du projet.\n",
+    "Ce notebook permet de créer plusieurs dataframe, qui pourront être utilisées par la suite dans les différents notebook. Pour toutes les dataframe dont les lignes correspondent à des documents, l'index sera l'identifiant du document en question, tel que défini dans le jeu de données IIT_CDIP. Cela garantit l'unicité de cet identifiant, et facilitera pour toute la suite des travaux les jointures entre documents. \n",
     "\n",
-    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Le notebook réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
     "\n",
-    "A l'issue (chapitre 2), il permet de créer un premier DataFrame intitulé DOCUMENTS,  qui rassemble les informations de bases relatives aux documents de la base de données RVL-CDIP:\n",
-    "- document_id\n",
-    "- filename\n",
-    "- label\n",
-    "- data_set\n",
-    "- rvl_image_path\n",
-    "- iit_image_path\n",
-    "- iit_individual_xml_path\n",
-    "- iit_grouped_xml_path"
+    "A l'issue (chapitre 2), il permet de créer les DataFrame utiles à la suite du projet et dont les caractéristiques sont rappelées dans le compte-rendu de projet. \n",
+    "\n",
+    "\n",
+    " **[insérer un résumé ici?]**"
    ]
   },
   {
@@ -65,6 +60,7 @@
     "data_path = os.path.join(project_path, 'data')\n",
     "raw_data_path = os.path.join(data_path, 'raw')\n",
     "processed_data_path = os.path.join(data_path, 'processed')\n",
+    "metadata_data_path = os.path.join(data_path, 'metadata')\n",
     "\n",
     "raw_rvl_cdip_path = os.path.join(raw_data_path, 'RVL-CDIP')\n",
     "rvl_cdip_images_path = os.path.join(raw_rvl_cdip_path, 'images')\n",
@@ -268,7 +264,7 @@
    "id": "dfc82701-20dd-4b6e-b707-89aaef8da252",
    "metadata": {},
    "source": [
-    "### 2.5 Fusion et sauvegarde"
+    "### 2.5 Concaténation"
    ]
   },
   {
@@ -280,6 +276,7 @@
    "source": [
     "dfs = [df_base, df_labels_and_data_sets, df_iit_ind, df_iit_coll]  # liste de DataFrames\n",
     "df_documents = reduce(lambda left, right: pd.merge(left, right, on='document_id', how=\"left\"), dfs)\n",
+    "df_documents.set_index('document_id', inplace = True)\n",
     "df_documents.head()"
    ]
   },
@@ -305,15 +302,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42bae580-2abf-4c23-8d04-6086cb0245ad",
+   "metadata": {},
+   "source": [
+    "### 2.6 Sauvegarde\n",
+    "Un comparatif sur la Dafaframe df_documents met en avant le gain de place obtenu avec parquet (24 Mo, par rapport à pickle (82 Mo) ou csb (88 Mo))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5adc2c60-5cb0-43dd-9283-3caea583715d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_documents.to_pickle(os.path.join(processed_data_path, \"df_documents.pkl\")) # environ 82 Mo\n",
+    "# df_documents.to_csv(os.path.join(processed_data_path, \"df_documents.csv\")) # environ 88 Mo\n",
+    "# df_documents.to_parquet(os.path.join(processed_data_path, \"df_documents.parquet\")) # environ 24 Mo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cedd46ee-20ea-467d-ab11-af826925fdd0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_documents.to_pickle(os.path.join(processed_data_path, \"df_documents.pkl\")) # environ 82 Mo\n",
-    "# df_documents.to_csv(os.path.join(processed_data_path, \"df_documents.csv\")) # environ 88 Mo\n",
-    "df_documents.to_parquet(os.path.join(processed_data_path, \"df_documents.parquet\")) # environ 24 Mo"
+    "df_documents[[]].to_parquet(os.path.join(metadata_data_path, \"df_documents.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3efa962-2d16-4f6d-b50c-50940bd158a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_documents[['filename', 'rvl_image_path', 'iit_image_path', 'iit_individual_xml_path', 'iit_collective_xml_path']].\\\n",
+    "    to_parquet(os.path.join(metadata_data_path, \"df_filepaths.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013da48d-09a6-4be8-ad6a-dff0bf62c497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_documents[[\"label\"]].to_parquet(os.path.join(metadata_data_path, \"df_encoded_labels.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d5ca38-b1d0-4719-8518-91909a699048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# info from data/raw/RVL-CDIP/readme.txt\n",
+    "labels_map = {\n",
+    "    0: \"letter\",\n",
+    "    1: \"form\",\n",
+    "    2: \"email\",\n",
+    "    3: \"handwritten\",\n",
+    "    4: \"advertisement\",\n",
+    "    5: \"scientific report\",\n",
+    "    6: \"scientific publication\",\n",
+    "    7: \"specification\",\n",
+    "    8: \"file folder\",\n",
+    "    9: \"news article\",\n",
+    "    10: \"budget\",\n",
+    "    11: \"invoice\",\n",
+    "    12: \"presentation\",\n",
+    "    13: \"questionnaire\",\n",
+    "    14: \"resume\",\n",
+    "    15: \"memo\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a396b54e-d2fd-4661-b1bb-339c17486b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_documents[[\"label\"]].replace(labels_map).to_parquet(os.path.join(metadata_data_path, \"df_plain_labels.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "959c91c3-aec1-4029-b597-a829c96ff384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(labels_map.items(), columns= [\"encoded_label\", \"plain_label\"]).set_index(\"encoded_label\").\\\n",
+    "    to_parquet(os.path.join(metadata_data_path, \"df_labels_mapping.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75fc0716-2178-4699-855a-3aaa18c630af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_documents[[\"data_set\"]].replace(labels_map).to_parquet(os.path.join(metadata_data_path, \"df_data_sets.parquet\"))"
    ]
   }
  ],
