--- a/notebooks/1.4-DOCUMENTS-SAMPLES-creation.ipynb
+++ b/notebooks/1.4-DOCUMENTS-SAMPLES-creation.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Le notebook réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
     "\n",
-    "A l'issue (chapitre 2), il permet de créer, pour 5 tailles prédéfinies, 5 échantillons de DataFrame (25 DataFrames en tout).\n",
+    "A l'issue (chapitre 2), il permet de créer, pour 5 tailles prédéfinies, 5 échantillons de la DataFrame documents (25 DataFrames en tout).\n",
     "Chaque DataFrame conserve les mêmes proprtions de targets et de train/val/test que la DataFrame d'origine. Les Dataframe sont nommées ainsi: \n",
     "\n",
     "DOCUMENTS_SAMPLE_[x]K_[n], où:\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "27a80f19-05e8-400a-9cfa-78c06ae1cbb0",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c8fc2081-3618-4bee-ab4e-c7cfd42450e4",
    "metadata": {},
    "outputs": [],
@@ -61,6 +61,7 @@
     "raw_data_path = os.path.join(data_path, 'raw')\n",
     "extracted_data_path = os.path.join(data_path, 'extracted')\n",
     "processed_data_path = os.path.join(data_path, 'processed')\n",
+    "metadata_data_path = os.path.join(data_path, 'metadata')\n",
     "\n",
     "raw_rvl_cdip_path = os.path.join(raw_data_path, 'RVL-CDIP')\n",
     "rvl_cdip_images_path = os.path.join(raw_rvl_cdip_path, 'images')\n",
@@ -89,13 +90,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2460e3d2-e6f5-4c13-95a9-1bb3f40255bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_set</th>\n",
+       "      <th>label</th>\n",
+       "      <th>stratifier</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>document_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>aaa06d00</th>\n",
+       "      <td>test</td>\n",
+       "      <td>6</td>\n",
+       "      <td>test/6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aaa08d00</th>\n",
+       "      <td>train</td>\n",
+       "      <td>9</td>\n",
+       "      <td>train/9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aaa09e00</th>\n",
+       "      <td>val</td>\n",
+       "      <td>11</td>\n",
+       "      <td>val/11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aaa10c00</th>\n",
+       "      <td>train</td>\n",
+       "      <td>2</td>\n",
+       "      <td>train/2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aaa11d00</th>\n",
+       "      <td>train</td>\n",
+       "      <td>3</td>\n",
+       "      <td>train/3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            data_set  label stratifier\n",
+       "document_id                           \n",
+       "aaa06d00        test      6     test/6\n",
+       "aaa08d00       train      9    train/9\n",
+       "aaa09e00         val     11     val/11\n",
+       "aaa10c00       train      2    train/2\n",
+       "aaa11d00       train      3    train/3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_parquet(os.path.join(extracted_data_path, \"df_documents.parquet\"))\n",
-    "df['stratifier'] = df.data_set + '/' + df.label.astype(str)"
+    "df = pd.read_parquet(os.path.join(metadata_data_path, \"df_data_sets.parquet\")).\\\n",
+    "    join(pd.read_parquet(os.path.join(metadata_data_path, \"df_encoded_labels.parquet\")))\n",
+    "df['stratifier'] = df.data_set + '/' + df.label.astype(str)\n",
+    "df.head()"
    ]
   },
   {
@@ -108,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e4958ecc-3df8-430d-ae8b-88c62c05b44e",
    "metadata": {},
    "outputs": [],
@@ -119,8 +204,9 @@
     "for random_state, (size, identifier) in enumerate(itertools.product(sizes_k, identifiers)):\n",
     "    sample_name = f\"df_documents_sample_{size}k_{identifier}.parquet\"\n",
     "    sample, _ = train_test_split(df, stratify=df.stratifier, train_size= 1000 * size, random_state=random_state)\n",
-    "    sample.drop(columns=\"stratifier\", inplace=True)\n",
-    "    sample.to_parquet(os.path.join(extracted_data_path, sample_name))"
+    "    if not os.path.exists(os.path.join(metadata_data_path, \"samples\")):\n",
+    "        os.makedirs(os.path.join(metadata_data_path, \"samples\"))\n",
+    "    sample[[]].to_parquet(os.path.join(metadata_data_path, \"samples\", sample_name))"
    ]
   },
   {
@@ -138,11 +224,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "33edb8cf-bfe9-459c-bc39-e762c7ce9a02",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>document_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mph87c00</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jgw02e00</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jar03a00</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avb14f00</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ags65c00</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [mph87c00, jgw02e00, jar03a00, avb14f00, ags65c00]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_parquet(os.path.join(metadata_data_path, \"samples\", \"df_documents_sample_1k_3.parquet\")).head()"
+   ]
   }
  ],
  "metadata": {
